# backend/docs/swagger.json
@@ -569,7 +569,7 @@
                 }
             }
         },
-        "/v1/{slug}": {
+        "/{slug}": {
             "get": {
                 "description": "Redirects the user to the original URL in the link",
                 "summary": "Redirect from short link",
@@ -800,7 +800,7 @@
                 },
                 "shortUrl": {
                     "type": "string",
-                    "example": "https://short.link/v1/myl1nk"
+                    "example": "https://short.link/myl1nk"
                 },
                 "slug": {
                     "type": "string",
@@ -828,6 +828,10 @@
                 },
                 "originalUrl": {
                     "type": "string"
+                },
+                "shortUrl": {
+                    "type": "string",
+                    "example": "https://short.link/myl1nk"
                 },
                 "updatedAt": {
                     "type": "string",
